Finally fixed the planet shaking bug!
Updated fog and decor displaying (faster and nicer)
Added a projector class which will handle different projection mode (fisheye, ortho etc..)
Made a fisheye projection mode which override gl/glu functions so that 3D drawing occures in fisheye projection mode.
Added gravity font.
Added many options in the configuration files.
Made a class for landscapes managment. Handle fisheye projection and panoramic fisheye pictures projection. The andscapes are loaded from a file so that it's easy to add custom landscapes.
Stellarium is now fully object oriented.
Replaced most of the char* with c++ strings to prevent bugs.
Added a full text user interface.
Improved configuration managment.

0.5.2 [29/04/2003]
Changed the configuration file to $HOME/.stellarium/VERSION/ on unix system to prevent conflicts between versions.
Correctly configure SDL in configure.in (patch by Kipp Canon)
Fixed some configuration files bugs.
Added the gui color parameters in the configuration file.
Catch the --version command line argument.

0.5.1 [11/04/2003]
Added an win32 installer script to use with inno setup.
Succeed compilation on MSYS with MinGW32.
Fixed the seg fault when quiting.
Fixed the fantom planets bug.
Implemented the ClickablePicture ui component to set the position easily by clicking the world map.
Found and eliminate the boring memory leak i knew since months.
Set the gui non-dynamic ie the size in pixel of the windows are fixed.
Fixed the SDL fullscreen bug in linux.
Fixed some gui bugs.
Fixed the timezone +13 bug.
Added a config.h.in file to set the compilation macros. The compilation output is now more readable.
Removed all the bugs that the glut->SDL change created.
Totally stopped the use of the glut library! Use the good SDL library instead. Increase the compatibility with every plateforms especially full screen mode in unix.
Added the CTRL + Up/Down keys to control the zoom.