@@ -36,7 +36,7 @@ public:
     int read(const string& font_fileName, const string& fileName);
 
 	// Draw all the Nebulas
-	void draw(int hints_ON, Projector* prj, bool _gravity_label);
+	void draw(int hints_ON, Projector* prj, tone_reproductor* eye, bool _gravity_label);
 
 	// Search the Nebulae by position
 	stel_object * search(Vec3f Pos);
