@@ -33,11 +33,12 @@ Added a projector class which will handle different projection mode (fisheye, or
 Made a fisheye projection mode which override gl/glu functions so that 3D drawing occures in fisheye projection mode.
 Added gravity font.
 Added many options in the configuration files.
-Made a class for landscapes managment. Handle fisheye projection and panoramic fisheye pictures projection. The andscapes are loaded from a file so that it's easy to add custom landscapes.
+Made a class for landscapes managment. Handle fisheye projection and panoramic fisheye pictures projection. The landscapes are loaded from a file so that it's easy to add custom landscapes.
 Stellarium is now fully object oriented.
 Replaced most of the char* with c++ strings to prevent bugs.
 Added a full text user interface.
 Improved configuration managment.
+Added a class "observator" for observer managment : i.e. observer's position and locales managment for timezone and time formating.
 
 0.5.2 [29/04/2003]
 Changed the configuration file to $HOME/.stellarium/VERSION/ on unix system to prevent conflicts between versions.
